--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+  <LINK REL=StyleSheet HREF="style.css" TYPE="text/css" MEDIA=screen>
     <title>Relay • Starter Kit</title>
   </head>
   <body>
